options table size thing fixed ( i think, as long as bids / asks are not too low )

--- a/public/style3.css
+++ b/public/style3.css
@@ -14,6 +14,12 @@ body {
 
 }
 
+#bottom_area{
+
+  min-width: 950px;
+
+}
+
 #voting_header{
   font-weight: bold;
   font-size: 35px;
